--- a/gui/templates/header.html
+++ b/gui/templates/header.html
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-        <h1>Blockchain shop</h1>
-        <nav>
-            <ul>
-                <li><a href="/">Главная</a></li>
-                <li><a href="/profile">Профиль</a></li>
-            </ul>
-        </nav>
-    </header>
-</body>
-</html>
+<header style="height: 70px; width: 100%; display: flex; align-items: center; justify-content: space-between;">
+    <h1>Blockchain shop</h1>
+    <nav>
+        <ul style="display: flex; gap: 30px;">
+            <a href="/">Главная</a>
+            <a href="/profile">Профиль</a>
+            <a href="/register">Регистрация</a>
+        </ul>
+    </nav>
+</header>
