--- a/gui/templates/index.html
+++ b/gui/templates/index.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
-    <title>Main</title>
-</head>
-<body>
-    {% include 'header.html' %}
+{% extends "base.html" %}
+
+{% block title %}Главная{% endblock %}
+{% block content %}
     <div>
         <div style="display: flex; gap: 10px; align-items: center;">
             <h2 style="font-weight: 500;">Contract Balance: </h2>
@@ -69,5 +63,4 @@
             }
         }
     </script>
-</body>
-</html>
+{% endblock %}
