--- a/gui/templates/profile.html
+++ b/gui/templates/profile.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
-</head>
-<body>
-    {% include 'header.html' %}
+{% extends "base.html" %}
+
+{% block title %}Главная{% endblock %}
+{% block content %}
     <h1>Your profile</h1>
-</body>
-</html>
+{% endblock %}
