add products on web

--- a/gui/templates/header.html
+++ b/gui/templates/header.html
@@ -4,7 +4,9 @@
         <ul style="display: flex; gap: 30px;">
             <a href="/">Главная</a>
             <a href="/profile">Профиль</a>
+            <a href="/products">Продукты</a>
             <a href="/register">Регистрация</a>
+            <a href="/login">Вход</a>
         </ul>
     </nav>
 </header>
