--- a/gui/templates/reg.html
+++ b/gui/templates/reg.html
@@ -3,7 +3,7 @@
 {% block title %}Регистрация{% endblock %}
 {% block content %}
 <div style="display: flex; justify-content: center;">
-    <form id="myForm" style="margin-top: 5vh; width: 50%; display: flex; flex-direction: column; justify-content: center;">
+    <form id="myForm">
         <h2 style="text-align: center; margin-bottom: 2vh;">Registration</h2>
         <label for="acc_type">Account Type:</label>
         <input type="text" id="acc_type" name="acc_type"><br><br>
