--- a/gui/templates/login.html
+++ b/gui/templates/login.html
@@ -3,7 +3,7 @@
 {% block title %}Вход{% endblock %}
 {% block content %}
 <div style="display: flex; justify-content: center;">
-    <form id="myForm" style="margin-top: 5vh; width: 50%; display: flex; flex-direction: column; justify-content: center;">
+    <form id="myForm">
         <h2 style="text-align: center; margin-bottom: 2vh;">Login</h2>        
         <label for="type">Type:</label>
         <input type="text" id="type" name="type"><br><br>
