--- a/gui/templates/profile.html
+++ b/gui/templates/profile.html
@@ -10,7 +10,8 @@
 
     <h2>Address: {{adr}}</h2>
     <h2>FIO: {{fio}}</h2>
-    <form id="myForm" style="margin-top: 5vh; width: 50%; display: flex; flex-direction: column; justify-content: center;">
+    {% if session['type'] == 'seller' %}
+    <form id="myForm">
         <h2 style="text-align: center; margin-bottom: 2vh;">Add product</h2>                
         <label for="name">Name:</label>
         <input type="text" id="name" name="name"><br><br>
@@ -30,6 +31,7 @@
 
         <div id="response"></div>
     </form>
+    {% endif %}
 
     <script>
         async function getBalance() {
