--- a/gui/templates/reg.html
+++ b/gui/templates/reg.html
@@ -47,14 +47,14 @@
                 const phone = document.getElementById("phone").value;
                 const fio = document.getElementById("fio").value;
 
-                document.getElementById("adr").value = '';
-                document.getElementById("acc_type").value = '';
-                document.getElementById("password").value = '';
-                document.getElementById("name").value = ''
-                document.getElementById("desc").value = ''
-                document.getElementById("region").value = ''
-                document.getElementById("phone").value = ''
-                document.getElementById("fio").value = ''
+                // document.getElementById("adr").value = '';
+                // document.getElementById("acc_type").value = '';
+                // document.getElementById("password").value = '';
+                // document.getElementById("name").value = ''
+                // document.getElementById("desc").value = ''
+                // document.getElementById("region").value = ''
+                // document.getElementById("phone").value = ''
+                // document.getElementById("fio").value = ''
                 document.getElementById("response").innerHTML = 'sending...';
 
                 const response = await fetch("/register_user", {
